[metadata]
name = tgpt
version = 0.1.0
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Fernando Perez-Garcia
maintainer_email = fepegar@gmail.com
license = MIT
license_file = LICENSE
platforms = OS Independent
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Typing :: Typed
project_urls =
    Source = https://github.com/fepegar/telegram-gpt-bot

[options]
install_requires =
    CurrencyConverter
    openai
    pydub
    python-telegram-bot
    rich
python_requires = >=3.7
include_package_data = True
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    tgpt=tgpt.main:main

[options.package_data]
tgpt =
    py.typed

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 88
select = C,E,F,W,B,B950
extend-ignore = E203, E501

[mypy]
pretty = True
strict = True

[mypy-currency_converter.*]
ignore_missing_imports = True

[mypy-pydub.*]
ignore_missing_imports = True

[isort]
force_single_line = True
profile = black
